--- a/Tests/PingPong/PingPong.Server/App.config
+++ b/Tests/PingPong/PingPong.Server/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="common">
@@ -15,10 +15,18 @@
         <arg key="showLevel" value="true" />
         <arg key="showLogName" value="false" />
         <arg key="showDateTime" value="true" />
-        <arg key="useColor" value="true"/>
+        <arg key="useColor" value="true" />
         <!-- This doesn't seem to work -->
         <arg key="dateTimeFormat" value="HH:mm:ss:fff" />
       </factoryAdapter>
     </logging>
   </common>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Common.Logging.Core" publicKeyToken="af08829b84f0328e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.4.1.0" newVersion="3.4.1.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
