--- a/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
+++ b/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
@@ -1,127 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\..\packages\Microsoft.Net.Compilers.2.0.1\build\Microsoft.Net.Compilers.props" Condition="Exists('..\..\packages\Microsoft.Net.Compilers.2.0.1\build\Microsoft.Net.Compilers.props')" />
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4BD40E13-2F9A-41C9-AED4-DC160B3D48A6}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CrossStitch.Stitch</RootNamespace>
-    <AssemblyName>CrossStitch.Stitch</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.2.0</Version>
+    <Authors>Andrew F. Whitworth</Authors>
+    <Company />
+    <Product>CrossStitch</Product>
+    <Description>A light-weight, low-ceremony app fabric for .NET: Microservice base library</Description>
+    <AssemblyVersion>0.2.0.0</AssemblyVersion>
+    <FileVersion>0.2.0.0</FileVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\net46</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>6</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release 4.5|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <OutputPath>bin\Release\net45\</OutputPath>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="BuiltInClassV1\Handles.cs" />
-    <Compile Include="BuiltInClassV1\Parameters.cs" />
-    <Compile Include="Events\EventHandlerExtensions.cs" />
-    <Compile Include="Events\PayloadEventArgs.cs" />
-    <Compile Include="Process\IMessageChannel.cs" />
-    <Compile Include="Process\IMessageSerializer.cs" />
-    <Compile Include="Process\JsonMessageSerializer.cs" />
-    <Compile Include="Process\MessageChannelType.cs" />
-    <Compile Include="Process\MessageSerializerFactory.cs" />
-    <Compile Include="Process\Parameters.cs" />
-    <Compile Include="Process\Pipes\CorePipeMessageChannel.cs" />
-    <Compile Include="Process\Pipes\PipeMessageChannel.cs" />
-    <Compile Include="Process\Pipes\StitchPipeMessageChannel.cs" />
-    <Compile Include="Process\Stdio\StdioMessageChannel.cs" />
-    <Compile Include="Process\Stitch\CrossStitchArguments.cs" />
-    <Compile Include="Process\Stitch\ParsedArguments.cs" />
-    <Compile Include="Process\Stitch\StitchArgumentParser.cs" />
-    <Compile Include="Process\Stitch\StitchMessageChannelFactory.cs" />
-    <Compile Include="Utility\Assert.cs" />
-    <Compile Include="Utility\Extensions\DictionaryExtensions.cs" />
-    <Compile Include="Utility\Extensions\EnumerableExtensions.cs" />
-    <Compile Include="Utility\IFactory.cs" />
-    <Compile Include="Utility\JsonUtility.cs" />
-    <Compile Include="Process\Arguments.cs" />
-    <Compile Include="Process\Core\CoreMessageManager.cs" />
-    <Compile Include="CoreStitchContext.cs" />
-    <Compile Include="Process\Core\FromStitchMessageReceivedEventArgs.cs" />
-    <Compile Include="Process\Core\FromStitchReaderThread.cs" />
-    <Compile Include="Process\Core\HeartbeatSyncReceivedEventArgs.cs" />
-    <Compile Include="Process\Core\LogsReceivedEventArgs.cs" />
-    <Compile Include="Process\Core\RequestResponseReceivedEventArgs.cs" />
-    <Compile Include="Process\Core\StitchProcessEventArgs.cs" />
-    <Compile Include="Process\Stitch\StitchMessageManager.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Process\FromStitchMessage.cs" />
-    <Compile Include="Process\Stitch\IToStitchMessageProcessor.cs" />
-    <Compile Include="Process\ToStitchMessage.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="CrossStitch.Stitch.nuspec" />
-    <None Include="nupkg-build.bat" />
-    <None Include="nupkg-publish.bat" />
-    <None Include="packages.config" />
-    <None Include="Process\README.md" />
-    <None Include="README.md" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
-  <Target Name="Package">
-    <!-- Ensure the Package directory exists for this project -->
-    <RemoveDir Directories="NuGet" />
-    <MakeDir Directories="NuGet" />
-    <!-- Package the project -->
-    <Exec WorkingDirectory="$(BuildDir)" Command="NuGet.exe pack CrossStitch.Stitch.nuspec -Verbosity detailed -OutputDir &quot;NuGet&quot; -Properties &quot;Configuration=$(Configuration)&quot;" />
-  </Target>
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\Microsoft.Net.Compilers.2.0.1\build\Microsoft.Net.Compilers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Microsoft.Net.Compilers.2.0.1\build\Microsoft.Net.Compilers.props'))" />
-  </Target>
+
 </Project>
