--- a/Tests/StitchStart/StitchStart.Server/packages.config
+++ b/Tests/StitchStart/StitchStart.Server/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Acquaintance" version="2.0.0-alpha1" targetFramework="net462" />
+  <package id="Acquaintance" version="2.0.0-alpha2" targetFramework="net462" />
   <package id="Common.Logging" version="3.4.0" targetFramework="net462" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
 </packages>
