--- a/Src/CrossStitch.Core.Tests/packages.config
+++ b/Src/CrossStitch.Core.Tests/packages.config
@@ -4,5 +4,7 @@
   <package id="Castle.Core" version="3.3.3" targetFramework="net462" />
   <package id="FluentAssertions" version="4.14.0" targetFramework="net462" />
   <package id="Moq" version="4.6.38-alpha" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="NUnit" version="3.6.1" targetFramework="net462" />
+  <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net462" />
 </packages>
