--- a/Tests/PenPal/PenPal.ServerA/PenPal.ServerA.csproj
+++ b/Tests/PenPal/PenPal.ServerA/PenPal.ServerA.csproj
@@ -35,7 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Acquaintance, Version=2.0.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Acquaintance.2.0.0-alpha2\lib\netstandard2.0\Acquaintance.dll</HintPath>
+      <HintPath>..\..\..\packages\Acquaintance.2.0.0-beta1\lib\netstandard2.0\Acquaintance.dll</HintPath>
     </Reference>
     <Reference Include="Common.Logging, Version=3.4.0.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Common.Logging.3.4.0\lib\net40\Common.Logging.dll</HintPath>
